# gltf-combiner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
gltf/: __init__.py  chunk.py  gltf.py
gltf/exceptions/: __init__.py  wrong_file_exception.py
gltf_combiner/: __init__.py  __main__.py  combiner.py
gltf_combiner/exceptions/: __init__.py  all_animation_channels_deleted.py  animation_not_found_exception.py
gltf_combiner/extensions/: __init__.py
gltf_combiner/extensions/flatbuffer/: __init__.py  common.py  deserializer.py  preprocessor.py  schema.py  serializer.py
gltf_combiner/extensions/odin/: __init__.py  attribute_type.py  gltf_constants.py  gltf_data_type.py  odin.py  odin_attribute.py  odin_constants.py
gltf_combiner/gltf/: chunk.py  gltf.py
gltf_combiner/gltf/exceptions/: __init__.py  all_animation_channels_deleted.py  animation_not_found_exception.py
gltf_combiner/streams/: __init__.py  bytereader.py  bytewriter.py  common.py
src/gltf/: __init__.py  chunk.py  gltf.py
src/gltf/exceptions/: __init__.py  _all_animation_channels_deleted.py  _animation_not_found_exception.py  _wrong_file_exception.py  wrong_file_exception.py
src/gltf_combiner/: __init__.py  __main__.py  combiner.py
src/gltf_combiner/exceptions/: __init__.py
src/gltf_combiner/extensions/flatbuffer/: __init__.py  deserializer.py  preprocessor.py  schema.py
src/gltf_combiner/extensions/odin/: attribute_format.py  attribute_type.py  gltf_component_type.py  odin.py  odin_attribute.py
src/gltf_combiner/extensions/odin/animation/: __init__.py  _continuous_packed_reader.py  _flags.py  _packed_reader.py  _raw_reader.py  _reader.py
src/gltf_combiner/streams/: bytewriter.py  common.py
src/streams/: __init__.py  _common.py  bytereader.py  bytewriter.py
