[tool.poetry]
name = "gltf-combiner"
version = "0.1.5"
description = ""
authors = ["Danila <crowo4ka@gmail.com>"]
readme = "README.md"
packages = [{include = "gltf_combiner"}]

[tool.poetry.dependencies]
python = "^3.11"
orjson = "3.10.18"
flatbuffers = "25.2.10"
numpy = "2.2.5"

[tool.poetry.group.dev.dependencies]
ruff = "0.11.7"
pyright = "1.1.400"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
