[project]
name = "gltf-combiner"
version = "0.1.7"
description = ""
readme = "README.md"
authors = [
    { name = "Danila", email = "crowo4ka@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.10.18",
    "flatbuffers>=25.2.10",
    "numpy>=2.2.5",
]

[project.scripts]
gltf_combiner = "gltf_combiner.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gltf", "gltf_combiner"]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "pyright>=1.1.400",
    "pre-commit>=4.2.0",
    "setuptools>=80.9.0",
]
