[project]
name = "gltf-combiner"
version = "0.1.7"
description = ""
authors = [{ name = "Danila", email = "crowo4ka@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "orjson==3.10.18",
    "flatbuffers==25.2.10",
    "numpy==2.2.5",
]

[dependency-groups]
dev = [
    "ruff==0.11.7",
    "pyright==1.1.400",
    "pre-commit>=4.2.0,<5",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["gltf_combiner"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
